Fix ghost accept, button sizes, sync Android UI
Bug fixes:
- Ghost accept now dismisses preview without applying moves to the
  game. The ghost is informational-only — shows what would happen,
  then returns to the real position so the player can continue.
- Pause and Undo buttons enlarged with borders for easier tapping
  (web: 16px font, 10px padding, 44px min-height; Compose: OutlinedButton)

Android UI sync:
- Added difficulty selector (Easy/Medium/Hard) to Compose menu
- Added move timer to game screen
- Added pause menu overlay with Resume/Return to Menu
- Replaced Back/Undo TextButtons with OutlinedButtons (44dp height)

Tests updated: 155 unit tests, 74 E2E tests — all passing

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -38,7 +38,11 @@
         /* Game */
         #game-screen { display: none; }
         .top-bar { display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px; }
-        .top-bar button { background: none; border: none; color: #E0E0E0; cursor: pointer; font-size: 14px; }
+        .top-bar button {
+            background: none; border: 1px solid #666; color: #E0E0E0; cursor: pointer;
+            font-size: 16px; padding: 10px 18px; border-radius: 8px; min-height: 44px;
+        }
+        .top-bar button:hover { background: #444; }
 
         /* Board */
         #board-wrapper {
