--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             min-height: 100vh;
         }
-        #app { width: 100%; max-width: 600px; padding: 16px; padding-top: 40px; }
+        #app { width: 100%; max-width: 600px; padding: 16px; padding-top: 56px; }
 
         /* Menu */
         #menu-screen { text-align: center; padding-top: 60px; }
@@ -167,7 +167,7 @@
         <div class="option-group">
             <label>Game Mode</label>
             <div class="chip-row">
-                <div class="chip selected" data-testid="mode-vs-engine" id="mode-vs-engine">vs Engine</div>
+                <div class="chip selected" data-testid="mode-vs-engine" id="mode-vs-engine">vs Computer</div>
                 <div class="chip" data-testid="mode-vs-human" id="mode-vs-human">vs Human</div>
             </div>
         </div>
@@ -187,7 +187,7 @@
         </div>
 
         <div class="toggle-row">
-            <span>Show engine thinking</span>
+            <span>Show computer thinking</span>
             <input type="checkbox" data-testid="thinking-toggle" id="thinking-toggle">
         </div>
 
@@ -239,7 +239,7 @@
         </div>
 
         <div id="engine-thinking-panel" data-testid="engine-thinking-panel">
-            <div id="thinking-title" data-testid="thinking-title">🧠 Engine Thinking</div>
+            <div id="thinking-title" data-testid="thinking-title">🧠 Computer Thinking</div>
             <div id="thinking-description" data-testid="thinking-description"></div>
             <div id="thinking-threats" data-testid="thinking-threats"></div>
             <div id="thinking-strategy" data-testid="thinking-strategy"></div>
