Add speech commentary system with i18n support
Speech integration:
- i18n string system (chess.speech.Strings) with MessageKey enum and
  StringResolver supporting locale fallback. English implemented.
- Game event detection (chess.speech.GameEvents) detects captures,
  check, checkmate, stalemate, castling, promotion, blunders.
- Commentary generator maps events to witty speech lines with
  priority ordering (checkmate > check > capture > etc).
- SpeechEngine interface with NoOpSpeechEngine for testing.
- GameCommentator orchestrates all speech during gameplay.

Platform implementations:
- Android: AndroidSpeechEngine using android.speech.tts.TextToSpeech
  (works offline, no setup required).
- Web: BrowserSpeechEngine using SpeechSynthesis API.
- Speech toggle on menu screen (both platforms).

Speech triggers: game start, captures (witty remarks for queen/rook),
check, checkmate, stalemate, ghost preview events, undo, castling,
promotion. Normal quiet moves are silent.

Tests: 39 new unit tests (commentary, events, strings, commentator).
All 194 unit + 74 E2E tests passing.

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -191,6 +191,11 @@
             <input type="checkbox" data-testid="thinking-toggle" id="thinking-toggle">
         </div>
 
+        <div class="toggle-row">
+            <span>Speech commentary</span>
+            <input type="checkbox" data-testid="speech-toggle" id="speech-toggle">
+        </div>
+
         <div class="option-group" id="difficulty-options">
             <label>Difficulty</label>
             <div class="chip-row">
