--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -52,6 +52,7 @@
             gap: 0;
         }
         #chess-board {
+            position: relative;
             display: grid;
             grid-template-columns: repeat(8, minmax(0, 1fr));
             grid-template-rows: repeat(8, minmax(0, 1fr));
@@ -83,12 +84,79 @@
             background: rgba(0,180,0,0.5); border-radius: 50%;
         }
         .square.legal-capture { box-shadow: inset 0 0 0 3px rgba(0,180,0,0.6); }
+        .piece-white { color: #FFFFFF; -webkit-text-stroke: 1px #333333; paint-order: stroke fill; }
+        .piece-black { color: #333333; -webkit-text-stroke: 1px #333333; }
         .square.ghost-highlight { background: rgba(0,170,255,0.3) !important; }
         .ghost-piece {
             position: absolute; opacity: 0.4; pointer-events: none;
             top: 50%; left: 50%; transform: translate(-50%, -50%);
         }
         .ghost-piece span { font-size: min(6.5vw, 52px); line-height: 1; }
+
+        /* Move animation */
+        #move-overlay {
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            pointer-events: none;
+            z-index: 10;
+        }
+        .animating-piece {
+            position: absolute;
+            font-size: min(6.5vw, 52px);
+            line-height: 1;
+            pointer-events: none;
+            z-index: 11;
+            transition: left 0.6s linear, top 0.6s linear, transform 0.6s ease-in-out;
+            transform-origin: center center;
+        }
+        .captured-fade {
+            position: absolute;
+            font-size: min(6.5vw, 52px);
+            line-height: 1;
+            pointer-events: none;
+            z-index: 5;
+            transition: opacity 0.3s linear;
+            transform: translate(-50%, -50%);
+        }
+
+        /* Captured pieces display */
+        #captured-pieces {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 4px 8px;
+            margin-bottom: 4px;
+            font-size: min(4vw, 28px);
+            min-height: 36px;
+        }
+        .captures-side {
+            display: flex;
+            gap: 2px;
+            flex-wrap: wrap;
+            align-items: center;
+        }
+        .captured-piece {
+            opacity: 0.8;
+        }
+        #material-balance {
+            font-size: 14px;
+            font-weight: bold;
+            min-width: 48px;
+            text-align: center;
+        }
+
+        /* Banter text display */
+        #banter-text {
+            text-align: center;
+            font-size: 14px;
+            color: #FFB74D;
+            font-style: italic;
+            padding: 6px 8px;
+            min-height: 28px;
+            opacity: 0;
+            transition: opacity 0.5s ease;
+        }
 
         .rank-col { display: flex; flex-direction: column; justify-content: space-around; font-size: 11px; color: #aaa; text-align: center; }
         .file-row { display: flex; justify-content: space-around; font-size: 11px; color: #aaa; margin-left: 20px; }
@@ -223,12 +291,8 @@
         </div>
 
         <div class="option-group" id="difficulty-options">
-            <label>Difficulty</label>
-            <div class="chip-row">
-                <div class="chip" data-testid="difficulty-easy" id="difficulty-easy">Easy</div>
-                <div class="chip selected" data-testid="difficulty-medium" id="difficulty-medium">Medium</div>
-                <div class="chip" data-testid="difficulty-hard" id="difficulty-hard">Hard</div>
-            </div>
+            <label id="difficulty-label">Difficulty: Level 6</label>
+            <input type="range" id="difficulty-slider" data-testid="difficulty-slider" min="1" max="12" value="6" step="1" style="width:220px;">
         </div>
 
         <div id="win-loss-display" data-testid="win-loss-display" style="margin-top:12px; font-size:13px; color:#aaa;"></div>
@@ -239,12 +303,18 @@
     <!-- Game Screen -->
     <div id="game-screen" data-testid="game-screen">
         <div class="game-left">
+            <div id="captured-pieces">
+                <div class="captures-side" id="black-captures" data-testid="black-captures"></div>
+                <div id="material-balance" data-testid="material-balance">⚖️ =</div>
+                <div class="captures-side" id="white-captures" data-testid="white-captures"></div>
+            </div>
             <div id="board-wrapper">
                 <div class="rank-col" id="rank-labels"></div>
                 <div id="chess-board" data-testid="chess-board"></div>
                 <div></div>
                 <div class="file-row" id="file-labels"></div>
             </div>
+            <div id="banter-text" data-testid="banter-text"></div>
         </div>
 
         <div class="game-right">
