--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -50,6 +50,31 @@
             grid-template-columns: 20px 1fr;
             grid-template-rows: 1fr 20px;
             gap: 0;
+            position: relative;
+        }
+        #thinking-overlay {
+            position: absolute;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: rgba(0,0,0,0.5);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            z-index: 100;
+            border-radius: 4px;
+        }
+        .thinking-spinner {
+            width: 40px; height: 40px;
+            border: 4px solid rgba(255,255,255,0.2);
+            border-top: 4px solid #6BAF6B;
+            border-radius: 50%;
+            animation: spin 0.8s linear infinite;
+        }
+        @keyframes spin { to { transform: rotate(360deg); } }
+        .thinking-text {
+            color: #ddd;
+            margin-top: 10px;
+            font-size: 15px;
         }
         #chess-board {
             position: relative;
@@ -319,6 +344,10 @@
                 <div id="chess-board" data-testid="chess-board"></div>
                 <div></div>
                 <div class="file-row" id="file-labels"></div>
+                <div id="thinking-overlay" data-testid="thinking-overlay" style="display:none;">
+                    <div class="thinking-spinner"></div>
+                    <div class="thinking-text">Thinking…</div>
+                </div>
             </div>
             <div id="banter-text" data-testid="banter-text"></div>
         </div>
