feat: reframe game summary as coaching lessons
Everything is now framed as teaching guidance:
- Lessons explain WHY a position is good/bad and WHAT to do about it
- Tips explain chess concepts (hanging pieces, castling, development, center control)
- Suggestions say 'Try:' with reasoning ('this gives check', 'this develops a piece')
- When it's opponent's turn: 'Watch how your opponent responds'
- Settings: 'Enable coach' and 'Highlight threats'
- Panel header: '🎓 Coach'

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -228,9 +228,9 @@
         }
         #game-summary-panel.active { display: block; }
         #summary-status { color: #FFB74D; font-size: 14px; margin-bottom: 2px; }
-        #summary-details { color: #B0B0B0; font-size: 11px; margin-bottom: 4px; }
-        #summary-risks { color: #EF5350; }
-        #summary-suggestion { margin-top: 4px; }
+        #summary-details { color: #B0B0B0; font-size: 11px; margin-bottom: 6px; }
+        #summary-risks { color: #EF5350; font-size: 12px; }
+        #summary-suggestion { margin-top: 4px; font-size: 12px; }
 
         /* Move history */
         #move-history {
@@ -315,7 +315,7 @@
         </div>
 
         <div class="toggle-row">
-            <span>Show game summary</span>
+            <span>Enable coach</span>
             <input type="checkbox" data-testid="thinking-toggle" id="thinking-toggle">
         </div>
 
@@ -325,7 +325,7 @@
         </div>
 
         <div class="toggle-row">
-            <span>Show pieces under threat</span>
+            <span>Highlight threats</span>
             <input type="checkbox" data-testid="threats-toggle" id="threats-toggle">
         </div>
 
