docs: update README, screenshots, fix web menu leak
README:
- Rewritten to reflect teaching app focus (coach, threats, banter)
- Updated feature list (12 difficulty levels, animated moves, fork/win detection)
- New screenshots: coach panel, threat highlights
- Updated project structure (GameSummary, speech modules)

Screenshots:
- Fresh captures of all screens with current UI
- Added: 05-coach.png, 06-threats.png
- Removed: 05-engine-thinking.png (replaced by coach)
- Renumbered: pause menu is now 07

Web fix:
- Fixed game screen leaking through menu in landscape viewports
  now scoped to #game-screen.active)

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -261,7 +261,7 @@
 
         /* Landscape layout */
         @media (min-aspect-ratio: 5/4) {
-            #game-screen {
+            #game-screen.active {
                 display: flex !important;
                 flex-direction: row;
                 gap: 16px;
