--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -14,7 +14,7 @@
             justify-content: center;
             min-height: 100vh;
         }
-        #app { width: 100%; max-width: 600px; padding: 16px; padding-top: 56px; }
+        #app { width: 100%; max-width: 600px; padding: 16px; padding-top: 56px; margin: 0 auto; }
 
         /* Menu */
         #menu-screen { text-align: center; padding-top: 60px; }
@@ -37,7 +37,7 @@
 
         /* Game */
         #game-screen { display: none; }
-        .top-bar { display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px; }
+        .top-bar { display: flex; justify-content: space-between; align-items: center; gap: 8px; flex-wrap: nowrap; margin-bottom: 8px; }
         .top-bar button {
             background: none; border: 1px solid #666; color: #E0E0E0; cursor: pointer;
             font-size: 16px; padding: 10px 18px; border-radius: 8px; min-height: 44px;
@@ -109,8 +109,8 @@
             background: rgba(0,180,0,0.5); border-radius: 50%;
         }
         .square.legal-capture { box-shadow: inset 0 0 0 3px rgba(0,180,0,0.6); }
-        .square.player-threat { background: rgba(255,140,0,0.5) !important; }
-        .square.opponent-vulnerable { background: rgba(144,238,144,0.4) !important; }
+        .square.player-threat { background: #D84315 !important; }
+        .square.opponent-vulnerable { background: #2E7D32 !important; }
         .piece-white { color: #FFFFFF; -webkit-text-stroke: 1px #333333; paint-order: stroke fill; }
         .piece-black { color: #333333; -webkit-text-stroke: 1px #333333; }
         .square.ghost-highlight { background: rgba(0,170,255,0.3) !important; }
@@ -136,6 +136,10 @@
             z-index: 11;
             transition: left 0.6s linear, top 0.6s linear, transform 0.6s ease-in-out;
             transform-origin: center center;
+        }
+        .animating-piece.ghost-anim {
+            opacity: 0.5;
+            filter: brightness(1.3);
         }
         .captured-fade {
             position: absolute;
@@ -227,7 +231,7 @@
             margin-top: 8px; font-size: 12px;
         }
         #game-summary-panel.active { display: block; }
-        #summary-status { color: #FFB74D; font-size: 14px; margin-bottom: 2px; }
+        #summary-status { color: #FFB74D; font-size: 14px; margin-bottom: 2px; font-weight: bold; }
         #summary-details { color: #B0B0B0; font-size: 11px; margin-bottom: 6px; }
         #summary-risks { color: #EF5350; font-size: 12px; }
         #summary-suggestion { margin-top: 4px; font-size: 12px; }
@@ -243,7 +247,7 @@
         /* Promotion modal */
         #promotion-modal, #pause-modal {
             display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0,0,0,0.6); z-index: 100;
+            background: rgba(0,0,0,0.75); z-index: 100;
             justify-content: center; align-items: center;
         }
         #promotion-modal.active, #pause-modal.active { display: flex; }
@@ -364,8 +368,8 @@
         <div class="game-right">
             <div class="top-bar">
                 <button id="pause-btn" data-testid="pause-btn">⏸ Pause</button>
-                <span id="move-timer" data-testid="move-timer" style="font-size:13px; color:#FFB74D;">0:00</span>
-                <span id="game-status" data-testid="game-status">White to move</span>
+                <span id="move-timer" data-testid="move-timer" style="font-size:13px; color:#FFB74D; white-space:nowrap; min-width:80px; margin-right:8px;">0:00</span>
+                <span id="game-status" data-testid="game-status" style="white-space:nowrap;">White to move</span>
                 <button id="undo-btn" data-testid="undo-btn">Undo</button>
             </div>
 
