--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -367,8 +367,9 @@
 
         <div class="game-right">
             <div class="top-bar">
-                <button id="pause-btn" data-testid="pause-btn">⏸ Pause</button>
-                <span id="move-timer" data-testid="move-timer" style="font-size:13px; color:#FFB74D; white-space:nowrap; min-width:80px; margin-right:8px;">0:00</span>
+                <button id="pause-btn" data-testid="pause-btn">❚❚ Pause</button>
+                <span id="move-timer" data-testid="move-timer" style="font-size:13px; color:#FFB74D; white-space:nowrap; min-width:80px;">0:00</span>
+                <span style="color:#555;">│</span>
                 <span id="game-status" data-testid="game-status" style="white-space:nowrap;">White to move</span>
                 <button id="undo-btn" data-testid="undo-btn">Undo</button>
             </div>
