Add audio system: SFX + medieval background music
- Shared AudioEngine interface with GamePhase detection
- BrowserAudioEngine (Web) and AndroidAudioEngine (Android)
- 9 procedurally generated CC0 sound effects
- 11 RandomMind Medieval CC0 background music tracks (48kbps mono)
- Calm tracks for opening, intense tracks for midgame/endgame
- SFX/Music toggles in pause menu, music on by default
- Mobile autoplay unlock for web browsers
- Conversion scripts: download_originals.sh, convert_music.sh, generate_sfx.py
- AUDIO-LICENSES.md with full attribution

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -420,6 +420,14 @@
         <div class="promotion-dialog" style="min-width: 240px;">
             <h3 style="margin-bottom:20px;">Game Paused</h3>
             <div style="display:flex; flex-direction:column; gap:12px;">
+                <div class="toggle-row" style="justify-content:space-between;">
+                    <span>Sound effects</span>
+                    <input type="checkbox" data-testid="sfx-toggle" id="sfx-toggle" checked>
+                </div>
+                <div class="toggle-row" style="justify-content:space-between;">
+                    <span>Background music</span>
+                    <input type="checkbox" data-testid="music-toggle" id="music-toggle">
+                </div>
                 <button id="resume-btn" data-testid="resume-btn" style="padding:12px 24px; font-size:16px; background:#6BAF6B; color:#fff; border:none; border-radius:8px; cursor:pointer;">Resume</button>
                 <button id="quit-btn" data-testid="quit-btn" style="padding:12px 24px; font-size:16px; background:#555; color:#E0E0E0; border:1px solid #666; border-radius:8px; cursor:pointer;">Return to Menu</button>
             </div>
