Add real piece sounds, animation sync, Ghost Chess branding & icons
- Replace procedural move sound with 7 real chess piece recordings (CC0, Freesound #366065)
- Sync piece placement sound to animation completion (web + Android)
- Rename app to Ghost Chess across all platforms
- Add ghostly king app icon (all Android mipmap sizes + web favicon)
- Enable background music by default

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chess Simulator</title>
+    <title>Ghost Chess</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="192x192" href="icon-192.png">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -294,7 +296,7 @@
 <div id="app">
     <!-- Menu Screen -->
     <div id="menu-screen" data-testid="menu-screen">
-        <h1 data-testid="app-title">♔ Chess Simulator</h1>
+        <h1 data-testid="app-title">♔ Ghost Chess</h1>
 
         <div class="option-group">
             <label>Game Mode</label>
