--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -303,6 +303,7 @@
             <div class="chip-row">
                 <div class="chip selected" data-testid="mode-vs-engine" id="mode-vs-engine">vs Computer</div>
                 <div class="chip" data-testid="mode-vs-human" id="mode-vs-human">vs Human</div>
+                <div class="chip" data-testid="mode-cvc" id="mode-cvc">Computer vs Computer</div>
             </div>
         </div>
 
@@ -338,10 +339,22 @@
         <div class="option-group" id="difficulty-options">
             <label id="difficulty-label">Difficulty: Level 6</label>
             <input type="range" id="difficulty-slider" data-testid="difficulty-slider" min="1" max="12" value="6" step="1" style="width:220px;">
-            <div id="difficulty-description" data-testid="difficulty-description" style="font-size:12px; color:#aaa; margin-top:2px;"></div>
+            <div id="win-loss-display" data-testid="win-loss-display" style="font-size:13px; color:#aaa; margin-top:4px;"></div>
+            <div class="toggle-row" style="margin-top:8px;">
+                <span>Dynamic difficulty</span>
+                <input type="checkbox" data-testid="dynamic-toggle" id="dynamic-toggle">
+            </div>
         </div>
 
-        <div id="win-loss-display" data-testid="win-loss-display" style="margin-top:12px; font-size:13px; color:#aaa;"></div>
+        <div class="option-group" id="cvc-options" style="display:none;">
+            <label id="cvc-white-label">White: Level 6 — Keen</label>
+            <input type="range" id="cvc-white-slider" min="1" max="12" value="6" step="1" style="width:220px;">
+            <div style="height:8px;"></div>
+            <label id="cvc-black-label">Black: Level 6 — Keen</label>
+            <input type="range" id="cvc-black-slider" min="1" max="12" value="6" step="1" style="width:220px;">
+        </div>
+
+        <div id="elo-display" data-testid="elo-display" style="margin-top:12px; font-size:14px; color:#FFB74D;"></div>
 
         <button id="start-game-btn" data-testid="start-game-btn">Start Game</button>
     </div>
