Add TTS voice selector dropdown to web menu
Shows a voice dropdown when speech commentary is enabled. Populates
from browser's available voices, persists selection in localStorage.
Previews selected voice with a test phrase.

--- a/webApp/src/jsMain/resources/index.html
+++ b/webApp/src/jsMain/resources/index.html
@@ -331,6 +331,13 @@
             <input type="checkbox" data-testid="speech-toggle" id="speech-toggle">
         </div>
 
+        <div class="option-group" id="voice-options" style="display:none;">
+            <label>Voice</label>
+            <select id="voice-select" data-testid="voice-select" style="width:220px; padding:6px; border-radius:6px; border:1px solid #666; background:#3D3D3D; color:#E0E0E0; font-size:13px;">
+                <option value="">Default</option>
+            </select>
+        </div>
+
         <div class="toggle-row">
             <span>Highlight threats</span>
             <input type="checkbox" data-testid="threats-toggle" id="threats-toggle">
